--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -180,7 +180,7 @@
                     <span class="required-form-group" style="margin-left: 1px;">*</span>
                 </div>
             </div>
-            <div class="d-flex align-items-center mtop"
+            <div class="d-flex align-items-center mtop animatedDown"
                 *ngIf="otrosCostosObsForm.get('tieneObservaciones').value === true">
                 <div class="text-area-quill izqTitle" [ngClass]="{
                     'color-secondaryColor':
