--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
@@ -58,7 +58,7 @@
                   " />
             </span>
         </div>
-        <div class="d-flex align-items-center mtop" *ngIf="expensasForm.get('tieneObservaciones').value === true">
+        <div class="d-flex align-items-center mtop animatedDown" *ngIf="expensasForm.get('tieneObservaciones').value === true">
             <div class="text-area-quill izqTitle" [ngClass]="{
                 'color-secondaryColor':
                 (expensasForm.get('observaciones').invalid && expensasForm.get('observaciones').touched) ||
