--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -77,7 +77,7 @@
                               " />
                     </span>
                 </div>
-                <div class="d-flex align-items-center mtop"
+                <div class="d-flex align-items-center mtop animatedDown"
                     *ngIf="addressForm.get('tieneObservaciones').value === true">
                     <div class="text-area-quill izqTitle" [ngClass]="{
                         'color-secondaryColor':
