--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
@@ -95,7 +95,7 @@
                       " />
                 </span>
             </div>
-            <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+            <div class="d-flex align-items-center mtop animatedDown" *ngIf="addressForm.get('tieneObservaciones').value === true">
                 <div class="text-area-quill izqTitle" [ngClass]="{
                     'color-secondaryColor':
                       (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
