--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -189,7 +189,7 @@
                       " />
                 </span>
             </div>
-            <div class="d-flex align-items-center mtop"
+            <div class="d-flex align-items-center mtop animatedDown"
                 *ngIf="otrosCostosObsForm.get('tieneObservaciones').value === true">
                 <div class="text-area-quill izqTitle" [ngClass]="{
                     'color-secondaryColor':
@@ -285,7 +285,7 @@
                           " />
                     </span>
                 </div>
-                <div class="d-flex align-items-center mtop"
+                <div class="d-flex align-items-center mtop animatedDown"
                     *ngIf="addressForm.get('tieneObservaciones').value === true">
                     <div class="text-area-quill izqTitle" [ngClass]="{
                         'color-secondaryColor':
