--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-datos-factura-autoriz/obs-datos-factura-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-datos-factura-autoriz/obs-datos-factura-autoriz.component.html
@@ -1,17 +1,18 @@
 <section *ngIf="solicitudPago !== undefined">
-    <mat-card class="shipping-card">
-        <mat-card-header class="header-card header-card--margin">
-          <mat-card-title class="header-card--text">
-            Datos
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content style="text-align: left;">
-          <h2 class="card-subTitle">Descripción de la factura</h2>
-          <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
-          <p><strong>Fecha de factura:</strong> {{ detalleForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
-          <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
-    
-            <!--
+  <mat-card class="shipping-card">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text">
+        Datos
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content style="text-align: left;">
+      <h2 class="card-subTitle">Descripción de la factura</h2>
+      <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
+      <p><strong>Fecha de factura:</strong> {{ detalleForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
+      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
+        ':'symbol-narrow':'.0-0' }} </p>
+
+      <!--
                 Se comenta el detalle de los descuentos en los datos de la factura... Atento a cualquier novedad 'Carlos Molero'
     
                 <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
@@ -29,98 +30,87 @@
                   <p><strong>Valor a pagar después de descuentos:</strong> ${{ detalleForm.get( 'valorAPagarDespues' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                 </section>
             -->
-        </mat-card-content>
+    </mat-card-content>
+  </mat-card>
+
+  <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+          Observación de la coordinación
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content style="text-align: left;">
+        <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+        <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones
+            a los datos de la factura?:</b> Si</p>
+        <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones
+            a los datos de la factura?:</b> No</p>
+        <section [innerHTML]="addressForm.get( 'observaciones' ).value"
+          *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+      </mat-card-content>
     </mat-card>
-    
-    <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-        <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card header-card--margin">
-                <mat-card-title class="header-card--text textoGris">
-                    Observación de la coordinación
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="text-align: left;">
-                <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a los datos de la factura?:</b> Si</p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a los datos de la factura?:</b> No</p>
-                <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
-            </mat-card-content>
-        </mat-card>
-    </ng-container>
-    <ng-template #noEsVerDetalle>
-        <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-            <div class="row mtop justCenter">
-                <div class="col-md-7">
-                    <label class="label-left"
-                    [ngClass]="{
+  </ng-container>
+  <ng-template #noEsVerDetalle>
+    <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+      <div class="row mtop justCenter">
+        <div class="col-md-7">
+          <label class="label-left" [ngClass]="{
                         'color-secondaryColor':
                           (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
                           (addressForm.get('tieneObservaciones').invalid && estaEditando)
                       }">¿Desde la coordinación tiene observaciones a los datos de la factura?</label>
-                </div>
-                <div class="col-md-2">
-                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                        formControlName="tieneObservaciones">
-                        <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                        <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                    </mat-radio-group>
-                    <span class="required-form-group" style="margin-left: 1px;">*</span>
-                </div>
-                <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="
+        </div>
+        <div class="col-md-2">
+          <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+            formControlName="tieneObservaciones">
+            <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+            <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+          </mat-radio-group>
+          <span class="required-form-group" style="margin-left: 1px;">*</span>
+        </div>
+        <span class="icon-incompleto">
+          <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+            [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip" *ngIf="
                         (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
                         (addressForm.get('tieneObservaciones').invalid && estaEditando)
-                      "
-                    />
-                  </span>
-            </div>
-            <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                <div class="text-area-quill izqTitle"
-                [ngClass]="{
+                      " />
+        </span>
+      </div>
+      <div class="d-flex align-items-center mtop animatedDown"
+        *ngIf="addressForm.get('tieneObservaciones').value === true">
+        <div class="text-area-quill izqTitle" [ngClass]="{
                     'color-secondaryColor':
                       (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                       (addressForm.get('observaciones').invalid && estaEditando)
                   }">
-                    <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+          <label for="observaciones" class="text-area-quill--label" [ngClass]="{
                                 'colorMainColor':
                                   !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                                   (addressForm.get('observaciones').invalid && estaEditando))
                               }">Observaciones a los datos de la factura</label>
-                    <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-                </div>
-                <span class="contador" *ngIf="addressForm.get('observaciones').value">
-                    {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                </span>
-                <span class="contador" *ngIf="addressForm.get('observaciones').value === null">
-                    1000
-                </span>
-                <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="
+          <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+        </div>
+        <span class="contador" *ngIf="addressForm.get('observaciones').value">
+          {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+        </span>
+        <span class="contador" *ngIf="addressForm.get('observaciones').value === null">
+          1000
+        </span>
+        <span class="icon-incompleto">
+          <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+            [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip" *ngIf="
                         (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                         (addressForm.get('observaciones').invalid && estaEditando)
-                      "
-                    />
-                  </span>
-            </div>
-            <button mat-button color="warn" class="btn-guardar mt1"
-                type="submit" [disabled]="addressForm.dirty === false">
-                <img src="assets/img/icon/guardar.svg" alt="Guardar">
-            </button>
-        </form>
-    </ng-template>
+                      " />
+        </span>
+      </div>
+      <button mat-button color="warn" class="btn-guardar mt1" type="submit" [disabled]="addressForm.dirty === false">
+        <img src="assets/img/icon/guardar.svg" alt="Guardar">
+      </button>
+    </form>
+  </ng-template>
 </section>
