--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
@@ -107,3 +107,27 @@
     </p>
   </mat-card-content>
 </mat-card>
+
+<mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionCumplimiento">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="mat-card-title header-card--text">
+      Verificación de responsables de grupo de novedades y liquidaciones
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      <strong>
+        {{ report.proyecto.informeFinal[0].informeFinalObservacionesCumplimiento[0].fechaCreacion | date:'dd/MM/yyyy' }}
+      </strong>
+    </p>
+    <p>
+      <strong>
+        ¿Desde el grupo de novedades y liquidaciones tiene observaciones al recibo de satisfacción?:
+      </strong>
+      <span *ngIf="report.proyecto.informeFinal[0].tieneObservacionesCumplimiento"> Si</span>
+      <span *ngIf="!report.proyecto.informeFinal[0].tieneObservacionesCumplimiento"> No</span>
+    </p>
+    <p *ngIf="report.proyecto.informeFinal[0].tieneObservacionesCumplimiento" [innerHTML]="report.proyecto.informeFinal[0].informeFinalObservacionesCumplimiento[0].observaciones">
+    </p>
+  </mat-card-content>
+</mat-card>
