--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -132,6 +132,7 @@
           ></mat-paginator>
         </div>
       </section>
+      <app-tabla-observaciones-cumplimiento-interventoria *ngIf="id && estadoCumplimiento === '2'" [id]="id"></app-tabla-observaciones-cumplimiento-interventoria>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
