--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -10,7 +10,7 @@
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title 
         {{estadoAprobacion === '0' || estadoAprobacion == null || estadoAprobacion === '7' || estadoAprobacion === '1' || semaforo ? 
-          'sin-diligenciar' : 'completo' }}">
+          'sin-diligenciar' : estadoAprobacion === '5' ? 'en-proceso' :'completo' }}">
                 Informe final y anexos
         </mat-panel-title>
       </mat-expansion-panel-header>
@@ -178,6 +178,7 @@
             [pageSizeOptions]="[5, 10, 25, 100]"
           ></mat-paginator>
         </div>
+        <app-tabla-observaciones-cumplimiento-interventoria *ngIf="id && estadoCumplimiento === '2'" [id]="id"></app-tabla-observaciones-cumplimiento-interventoria>
 
         <div class="text-center">
           <button mat-button color="warn" class="btn-guardar" (click)="onSubmit(false)">
