novedad guardar descripcion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -98,6 +98,7 @@
       </div>
     </mat-card-content>
   </mat-card>
+  {{ novedadContractual.novedadContractualDescripcion | json }}
   <div class="text-center">
     <button mat-button color="warn" class="btn-guardar" type="submit">
       <img src="assets/img/icon/guardar.svg" alt="Guardar">
