--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-observaciones-cumplimiento-interventoria/tabla-observaciones-cumplimiento-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-observaciones-cumplimiento-interventoria/tabla-observaciones-cumplimiento-interventoria.component.html
@@ -1,5 +1,5 @@
 <div class="text-left">
-  <mat-card class="shipping-card var-main-gris" *ngIf="anexos">
+  <mat-card class="shipping-card var-main-gris" *ngIf="anexos && existe_historial">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="mat-card-title header-card--text">
         Verificación de responsables de grupo de novedades y liquidaciones
