--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/registrar-informe-final/registrar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/registrar-informe-final/registrar-informe-final.component.html
@@ -24,6 +24,9 @@
   </div>
 
   <app-datos-del-proyecto *ngIf="report" [report]="report"></app-datos-del-proyecto>
-  <app-form-recibo-a-satisfaccion *ngIf="report" [report]="report" (formCompleto)="updateForm($event);"></app-form-recibo-a-satisfaccion>
-  <app-tabla-informe-final-anexos *ngIf="mostrarInforme && report" [id]="id" [llaveMen]="report.proyecto.llaveMen" [report]="report"></app-tabla-informe-final-anexos>
+  <app-form-recibo-a-satisfaccion *ngIf="report && !mostrarDetalleRecibo" [report]="report" (formCompleto)="updateForm($event);"></app-form-recibo-a-satisfaccion>
+  <app-detalle-recibo-satisfaccion *ngIf="report && mostrarDetalleRecibo" [report]="report"></app-detalle-recibo-satisfaccion>
+  <app-tabla-informe-final-anexos *ngIf="mostrarInforme && report && !mostrarDetalleAnexos" [id]="id" [llaveMen]="report.proyecto.llaveMen" [report]="report"></app-tabla-informe-final-anexos>
+  <app-tabla-detalle-informe-anexos *ngIf="mostrarInforme && report && mostrarDetalleAnexos" [id]="id"></app-tabla-detalle-informe-anexos>
+
 </section>
