--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -113,7 +113,7 @@
           class="btn-table"
           [routerLink]="['revisarInforme', element.proyectoId]"
         >
-          <span *ngIf="element.estadoCumplimiento == null || element.estadoCumplimiento === '0'">Revisar informe</span> <!--Null o 0-->
+          <span *ngIf="element.estadoCumplimiento == null || element.estadoCumplimiento === '0' || element.estadoCumplimiento === '4'">Revisar informe</span> <!--Null o 0-->
           <span *ngIf="element.estadoCumplimiento != null && element.estadoCumplimiento !== '0' && element.estadoCumplimiento === '1'">ver Detalle/Editar</span><!--En proceso de validación de cumplimiento-->
         </a>
         <a
